Implemented shared preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   sign_in_with_apple: 3.3.0
   timeago: 3.1.0
   url_launcher: 6.0.15
+  shared_preferences: 2.0.9
+  prefs: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
