--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  http: ^0.13.4
   auto_size_text: 3.0.0
   built_collection: 5.1.1
   built_value: 8.1.3
@@ -41,7 +42,7 @@ dependencies:
   image_picker: 0.8.4+4
   intl: 0.17.0
   json_path: 0.2.1
-  json_serializable: 4.1.4
+  json_serializable: ^6.1.1
   mime_type: 1.0.0
   page_transition: 2.0.4
   rxdart: 0.26.0
@@ -58,10 +59,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: 2.1.5
-  built_value_generator: 8.1.1
+  analyzer: ^2.8.0
+  built_value_generator: ^8.1.3
   flutter_launcher_icons: 0.9.2
-
+  test:
+  test_api:
+  mockito: ^5.0.16
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 
