--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: art_shack
-description: A new Flutter project.
+description: Art Shack app project for Uninorte MisionTIC
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -38,13 +38,17 @@ dependencies:
   firebase_storage: 10.1.0
   font_awesome_flutter: 8.11.0
   flutter_google_places: 0.3.0
+  geocoding:
+  geolocator:
   google_fonts: 2.1.0
   google_sign_in: 4.5.9
+  google_maps_flutter:
   image_picker: 0.8.4+4
   intl: 0.17.0
   json_path: 0.2.1
   json_serializable: ^6.1.1
   mime_type: 1.0.0
+  location:
   page_transition: 2.0.4
   rxdart: 0.26.0
   sign_in_with_apple: 3.3.0
